fix:card alignement on home page

--- a/public/assets/scss/custom/custom.scss
+++ b/public/assets/scss/custom/custom.scss
@@ -59,9 +59,7 @@ $canvas-z-index: 8;
   //   .rating{
   //     justify-content: start !important;
   //   }
-  .col-sm-6 {
-    padding-left: 40px;
-  }
+
 }
 
 @media (min-width: 768px) {
